Prevent scrollbars

--- a/game-of-life/game-of-life.css
+++ b/game-of-life/game-of-life.css
@@ -20,6 +20,7 @@ body {
   background-color: var(--body-background);
   width: 100vw;
   height: 100vh;
+  overflow: hidden;
 }
 
 #text-bar {
